Added missing source file

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,7 +1,7 @@
 
 lib_LTLIBRARIES = libjson.la
 
-libjson_la_SOURCES = value.cpp ivalue.cpp ibool.cpp inumeric.cpp iscalar.cpp iarray.cpp ihash.cpp util.cpp
+libjson_la_SOURCES = value.cpp ivalue.cpp iscalar.cpp ibool.cpp inumeric.cpp istring.cpp iarray.cpp ihash.cpp util.cpp
 
 libjson_la_LDFLAGS = -version-info 0:0:0
 
