JSON::Hash() renamed to JSON::Object()

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,3 +1,3 @@
 
-nobase_include_HEADERS = json/value.hpp json/ivalue.hpp json/iscalar.hpp json/ibool.hpp json/inumeric.hpp json/istring.hpp json/iarray.hpp json/ihash.hpp json/util.hpp
+nobase_include_HEADERS = json/value.hpp json/ivalue.hpp json/iscalar.hpp json/ibool.hpp json/inumeric.hpp json/istring.hpp json/iarray.hpp json/iobject.hpp json/util.hpp
 
