JSON::refcounted class implemented

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,3 +1,12 @@
 
-nobase_include_HEADERS = json/value.hpp json/ivalue.hpp json/iscalar.hpp json/ibool.hpp json/inumeric.hpp json/istring.hpp json/iarray.hpp json/iobject.hpp json/util.hpp
+nobase_include_HEADERS = json/value.hpp
+nobase_include_HEADERS += json/refcounted.hpp
+nobase_include_HEADERS += json/ivalue.hpp
+nobase_include_HEADERS += json/iscalar.hpp
+nobase_include_HEADERS += json/ibool.hpp
+nobase_include_HEADERS += json/inumeric.hpp
+nobase_include_HEADERS += json/istring.hpp
+nobase_include_HEADERS += json/iarray.hpp
+nobase_include_HEADERS += json/iobject.hpp
+nobase_include_HEADERS += json/util.hpp
 
