--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,9 +1,9 @@
 
-lib_LTLIBRARIES = libjson.la
+lib_LTLIBRARIES = libjson++.la
 
-libjson_la_SOURCES = value.cpp ivalue.cpp iscalar.cpp ibool.cpp inumeric.cpp istring.cpp iarray.cpp iobject.cpp util.cpp
+libjson___la_SOURCES = value.cpp ivalue.cpp iscalar.cpp ibool.cpp inumeric.cpp istring.cpp iarray.cpp iobject.cpp util.cpp
 
-libjson_la_LDFLAGS = -version-info 0:0:0
+libjson___la_LDFLAGS = -version-info 0:0:0
 
 AM_CPPFLAGS = -I$(top_srcdir)/include
 
