Added CPack support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,3 +17,11 @@ include_directories("${PROJECT_SOURCE_DIR}/include")
 add_subdirectory(include)
 add_subdirectory(src)
 
+set(CPACK_SOURCE_GENERATOR TGZ)
+
+set(CPACK_SOURCE_IGNORE_FILES ".git/;.gitignore")
+
+set(CPACK_PACKAGE_CONTACT "krichy@tvnetwork.hu")
+
+Include(CPack)
+
