Calculating libjson versions from git tags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,8 +2,18 @@
 cmake_minimum_required (VERSION 2.8)
 project (libjson++)
 
-set (libjson++_VERSION_MAJOR 1)
-set (libjson++_VERSION_MINOR 0)
+execute_process(
+		COMMAND sh -c "git describe --tags HEAD | sed -e 's/\\..*//'"
+		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+		OUTPUT_VARIABLE libjson++_VERSION_MAJOR
+		OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+execute_process(
+		COMMAND sh -c "git describe --tags HEAD | sed -e 's/-.*//'"
+		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+		OUTPUT_VARIABLE libjson++_VERSION_FULL
+		OUTPUT_STRIP_TRAILING_WHITESPACE
+)
 
 if ( "${CMAKE_BUILD_TYPE}" STREQUAL "" )
 	set ( CMAKE_BUILD_TYPE Release )
