--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,7 +13,7 @@ add_library(jsonstatic STATIC ${json_SOURCES})
 add_library(jsonshared SHARED ${json_SOURCES})
 
 set_target_properties (jsonstatic PROPERTIES OUTPUT_NAME json++)
-set_target_properties (jsonshared PROPERTIES OUTPUT_NAME json++ VERSION ${libjson++_VERSION_MAJOR}.${libjson++_VERSION_MINOR} SOVERSION ${libjson++_VERSION_MAJOR})
+set_target_properties (jsonshared PROPERTIES OUTPUT_NAME json++ VERSION ${libjson++_VERSION_FULL} SOVERSION ${libjson++_VERSION_MAJOR})
 
 install(TARGETS
 		jsonstatic
