--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,18 +2,9 @@
 cmake_minimum_required (VERSION 2.8)
 project (libjson++)
 
-execute_process(
-		COMMAND sh -c "git describe --tags --abbrev=0 HEAD | sed -e 's/\\..*//'"
-		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-		OUTPUT_VARIABLE libjson++_VERSION_MAJOR
-		OUTPUT_STRIP_TRAILING_WHITESPACE
-)
-execute_process(
-		COMMAND sh -c "git describe --tags --abbrev=0 HEAD"
-		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-		OUTPUT_VARIABLE libjson++_VERSION_FULL
-		OUTPUT_STRIP_TRAILING_WHITESPACE
-)
+set (libjson++_VERSION_MAJOR 0)
+set (libjson++_VERSION_MINOR 3)
+set (libjson++_VERSION_PATCH 1)
 
 if ( "${CMAKE_BUILD_TYPE}" STREQUAL "" )
 	set ( CMAKE_BUILD_TYPE Release )
