--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,13 @@ if ( "${CMAKE_BUILD_TYPE}" STREQUAL "" )
 	set ( CMAKE_BUILD_TYPE Release )
 endif ( )
 
-set (CMAKE_C_FLAGS "-Wall -Wextra -Werror")
-set (CMAKE_CXX_FLAGS "-Wall -Wextra -Werror")
+set (FLAGS "-Wall")
+if (${UNIX})
+	set(FLAGS "${FLAGS} -Wextra -Werror")
+endif ( )
+
+set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${FLAGS}")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${FLAGS}")
 
 include_directories("${PROJECT_SOURCE_DIR}/include")
 
