--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,7 +15,7 @@ add_library(jsonshared SHARED ${json_SOURCES})
 set_target_properties (jsonstatic PROPERTIES OUTPUT_NAME json++)
 set_target_properties (jsonshared PROPERTIES OUTPUT_NAME json++
 		VERSION ${libjson++_VERSION_MAJOR}.${libjson++_VERSION_MINOR}.${libjson++_VERSION_PATCH}
-		SOVERSION ${libjson++_VERSION_MAJOR}
+		SOVERSION ${libjson++_VERSION_MAJOR}.${libjson++_VERSION_MINOR}
 )
 
 install(TARGETS
